# Homba-Tracker-v2.4

./: .gitignore  README.md  deploy_to_server.ps1  docker-compose.yml
backend/: .dma_signals_cache.json  .dockerignore  .env.example  .gitignore  Dockerfile  azure-startup.sh  backfill_nav.py  config_out.txt  create_guest_user.py  db_test_out.txt  debug_growth_logic.py  debug_license.py  debug_output_3.txt  debug_units.py  debug_yfinance.py  financial_portfolio.db  financial_portfolio_backup.db  fix_db_mf_nav.py  fix_db_schema.py  full_equity_report.csv  generate_rating_data_requirements.py  get_exact.py  gunicorn_conf.py  import_log.txt  import_log_final.txt  inspect_excel.py  inspect_yfinance_growth.py  inspection_report_utf8.txt  list_all_shares.py  list_top_holdings.py  list_users.py  main.py  master_sync.py  migrate_radar_scoring.py  nav_audit_report.txt  nav_simulation_results.txt  out.txt  pyproject.toml  rating_data_requirements.xlsx  refresh_all_analytics.py  (+27 more)
backend/Alert_System_Update/: auth_router.py  user_schemas.py
backend/Profile_Notification_Update/: auth_router.py  notification_service.py  scheduler.py  user_models.py  user_schemas.py
backend/Stock_Radar_Update/: notification_service.py  user_models.py
backend/app/: database.py  scheduler.py
backend/data/: .dma_signals_cache.json
backend/scripts/: add_growth_column.py  add_growth_columns_v2.py  add_unit_columns_v3.py  calculate_current_mf_nav.py  clear_history.py  compute_all_ratings.py  debug_bonds.py  debug_indices_v2.py  debug_nav_api.py  debug_units_user2.py  debug_user_breakdown.py  (+55 more)
(+232 files in other folders)
